# Projekt_Software_Engineering_DLMCSPSE_D

./: .gitignore  CMakeLists.txt  app.rc  main.cpp  readme.md  setup.iss
db/config/: icons.csv  sqlite_build.ddl
db/demo/: demo.pwdb  template.pwdb
helper/: icons.csv
helper/demo_db/: sqlite_demo.ddl
helper/demo_db/data/: accounts.csv  categories.csv  categories_group.csv  root.csv  transactions.csv
helper/demo_db/script/: prepare.py
include/: account.h  accountDialog.h  addDatabaseDialog.h  category.h  categoryDialog.h  categoryEditDialog.h  chart.h  constants.h  database.h  databaseDialog.h  export.h  exportDialog.h  helpDialog.h  iconPickerDialog.h  init.h  mainWindow.h  overviewDialog.h  search.h  statemgr.h  status_log.h  transaction.h  transactionDialog.h  welcomescreenDialog.h
resources/: resources.qrc
resources/static/help/: help.html
resources/static/img/: Thumbs.db
src/: account.cpp  accountDialog.cpp  addDatabaseDialog.cpp  category.cpp  categoryDialog.cpp  categoryEditDialog.cpp  chart.cpp  database.cpp  databaseDialog.cpp  export.cpp  exportDialog.cpp  helpDialog.cpp  iconPickerDialog.cpp  init.cpp  mainWindow.cpp  overviewDialog.cpp  search.cpp  statemgr.cpp  status_log.cpp  transaction.cpp  transactionDialog.cpp  welcomescreenDialog.cpp
ui/: accountDialog.ui  addDatabaseDialog.ui  categoryDialog.ui  categoryEditDialog.ui  databaseDialog.ui  exportDialog.ui  helpDialog.ui  iconPickerDialog.ui  mainWindow.ui  overviewDialog.ui  transactionDialog.ui  welcomescreenDialog.ui
